<resources>
    <string name="app_name">Eklesia</string>
    <string name="preference_file_key">io.eklesia.eklesia.preferences_file_key</string>
    <string name="base_url">https://eklesia-195019.appspot.com/</string>
    <string name="client_id">1</string>
    <string name="client_secret">bD0YdrFwFjDbdlcQ2qtxF0pc2KRKqT89xDkd7jo9</string>

    <!--stringhe per user interface-->
    <string name="esci_applicazione_secondo_click">Premi un\'altra volta per uscire</string>
    <string name="stringa_email">Email</string>
    <string name="stringa_password">Password</string>
    <string name="stringa_conferma_password">Conferma password</string>
    <string name="stringa_nome">Nome</string>
    <string name="stringa_cognome">Cognome</string>
    <string name="stringa_data_nascita">Data di nascita</string>
    <string name="stringa_accedi">Accedi</string>
    <string name="stringa_registrati">Registrati</string>
    <string name="stringa_conferma">Conferma</string>
    <string name="stringa_sesso">Sesso</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="testo_prova">mihaeladsadasdsaaaaaaaaaaasssssssssssssssssssssssssssssssssssssssssssssssssssss
    sssssssssssssssssssssssssssssssssssssssssssss
    ssssssssssssssssssssssssssssssssssss
    sssssssssssssssssssssssssssssssssssss
    sssssssssssssssssssssssssssssssssssssssss
    ssssssssssssssssssssssssssssssssssssssssssss
    ssssssssssssssssssssssssssssssssssssss</string>
</resources>
