<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingVertical="15dp"
    android:paddingHorizontal="30dp"
    android:orientation="vertical"
    android:id="@+id/register_layout"
    tools:context="io.eklesia.eklesia.RegisterActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/nome_text_input_register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            app:errorEnabled="true">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/nome_edit_text_register"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/stringa_nome"
                android:inputType="text"/>
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/cognome_text_input_register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            app:errorEnabled="true">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/cognome_edit_text_register"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/stringa_cognome"
                android:inputType="text"/>

        </android.support.design.widget.TextInputLayout>

    </LinearLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/email_text_input_register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:errorEnabled="true">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/email_edit_text_register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/stringa_email"
            android:inputType="text"/>
        </android.support.design.widget.TextInputLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/password_text_input_register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            app:errorEnabled="true">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/password_edit_text_register"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:hint="@string/stringa_password" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/conferma_password_text_input_register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            app:errorEnabled="true">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/conferma_password_edit_text_register"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/stringa_conferma_password"
                android:inputType="textPassword"/>

        </android.support.design.widget.TextInputLayout>

    </LinearLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/data_nascita_text_input_register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:errorEnabled="true">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/data_nascita_edit_text_register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusable="false"
            android:hint="@string/stringa_data_nascita"
            android:inputType="none"/>

    </android.support.design.widget.TextInputLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="12sp"
        android:paddingBottom="8dp"
        android:textColor="@color/colorPrimary"
        android:text="@string/stringa_sesso"
        android:id="@+id/sesso_label_register"/>

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:id="@+id/sesso_register">
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Maschio"
            android:id="@+id/m_register" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Femmina"
            android:id="@+id/f_register" />
    </RadioGroup>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="12sp"
        android:paddingBottom="8dp"
        android:textColor="#f44336"
        android:id="@+id/sesso_message_register"/>


    <Button
        style="?android:attr/borderlessButtonStyle"
        android:textColor="@color/colorPrimary"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/stringa_registrati"
        android:id="@+id/conferma_register"/>


</LinearLayout>
