<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/register2_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingRight="30dp"
    android:paddingLeft="30dp"
    android:paddingTop="15dp"
    android:paddingBottom="15dp"
    tools:context="io.eklesia.eklesia.RegisterActivity2">

    <LinearLayout
        android:id="@+id/register_panel_2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">


        <TextView
            style="@style/TextAppearance.AppCompat.Display3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:text=":)"
            android:textAlignment="center"
            android:textColor="@color/colorPrimary"
            android:textStyle="bold"/>

        <TextView
            style="@style/TextAppearance.AppCompat.Display4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="16dp"
            android:text="Ci siamo quasi..."
            android:textAlignment="center"
            android:textSize="32dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <android.support.design.widget.TextInputLayout
                android:id="@+id/nome_text_input_register2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:transitionGroup="true"
                app:errorEnabled="true">

                <EditText
                    android:id="@+id/nome_edit_text_register2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/stringa_nome"
                    android:inputType="text"/>

            </android.support.design.widget.TextInputLayout>


            <android.support.design.widget.TextInputLayout
                android:id="@+id/cognome_text_input_register2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:transitionGroup="true"
                app:errorEnabled="true"
                app:passwordToggleEnabled="true"
                app:passwordToggleTint="@color/colorPrimary">

                <EditText
                    android:id="@+id/cognome_edit_text_register2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/stringa_cognome"
                    android:inputType="text"/>

            </android.support.design.widget.TextInputLayout>
        </LinearLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/data_text_input_register2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/stringa_data_nascita"
            android:transitionGroup="true"
            app:errorEnabled="true">

            <EditText
                android:id="@+id/data_edit_text_register2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:focusable="false"

                android:inputType="text"/>

        </android.support.design.widget.TextInputLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingBottom="8dp"
                android:text="@string/stringa_sesso"
                android:textColor="@color/colorPrimary"
                android:textSize="12sp"/>

            <RadioGroup
                android:id="@+id/sesso_register2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:checkedButton="@id/m"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/m"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Maschio"/>

                <RadioButton
                    android:id="@+id/f"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Femmina"/>
            </RadioGroup>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="8dp"
                android:textSize="12sp"/>
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="61dp"
            android:visibility="gone">

            <Button

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/stringa_accedi"
                android:textColor="@color/colorPrimary"/>

            <Button

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/stringa_registrati"
                android:textColor="@color/colorPrimary"/>
        </LinearLayout>
    </LinearLayout>

    <Button
        android:id="@+id/conferma_register"
        android:layout_width="232dp"
        android:layout_height="48dp"
        android:layout_below="@id/register_panel_2"
        android:layout_centerHorizontal="true"
        android:background="@drawable/rounded_borders_button"
        android:text="@string/stringa_conferma"
        android:textColor="@color/colorAccent"/>


</RelativeLayout>
