<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:tools="http://schemas.android.com/tools"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             tools:context="io.eklesia.eklesia.Register2">


    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/register_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingHorizontal="30dp"
        android:paddingVertical="15dp"
        tools:context="io.eklesia.eklesia.RegisterActivity">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <android.support.design.widget.TextInputLayout
                android:id="@+id/nome_text_input_register"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                app:errorEnabled="true">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/nome_edit_text_register"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/stringa_nome"
                    android:inputType="text"/>
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/cognome_text_input_register"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                app:errorEnabled="true">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/cognome_edit_text_register"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/stringa_cognome"
                    android:inputType="text"/>

            </android.support.design.widget.TextInputLayout>

        </LinearLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/conferma_password_text_input_register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:errorEnabled="true">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/conferma_password_edit_text_register"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/stringa_conferma_password"
                android:inputType="textPassword"/>

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/data_nascita_text_input_register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:errorEnabled="true">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/data_nascita_edit_text_register"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:focusable="false"
                android:hint="@string/stringa_data_nascita"
                android:inputType="none"/>

        </android.support.design.widget.TextInputLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/sesso_label_register"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="8dp"
                android:text="@string/stringa_sesso"
                android:textColor="@color/colorPrimary"
                android:textSize="12sp"/>

            <RadioGroup
                android:id="@+id/sesso_register"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/m_register"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:text="Maschio"/>

                <RadioButton
                    android:id="@+id/f_register"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Femmina"/>
            </RadioGroup>

            <TextView
                android:id="@+id/sesso_message_register"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="8dp"
                android:textColor="#f44336"
                android:textSize="12sp"/>
        </LinearLayout>

        <Button
            android:id="@+id/conferma_register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/stringa_conferma"
            android:textColor="@color/colorPrimary"/>


    </LinearLayout>
</FrameLayout>


